theme/static/css/app.css
/* ... */
.post-list {
  margin: 2.5rem 0;
}

.post-item {
  padding: 0;
  margin-bottom: 0.75rem;
  list-style: none;
  line-height: 1.5;
}

.post-item::before {
  display: none;
}

.post-item a {
  color: var(--c-primary);
  font-weight: 500;
}

.post-item div {
  font-size: var(--font-size-sm);
}

.post-date {
  display: block;
  margin-right: 1rem;
  font-variant-numeric: tabular-nums slashed-zero;
  color: var(--c-gray);
}

.post-meta {
  margin: 3rem 0;
  font-size: var(--font-size-sm);
  color: var(--c-gray);
}

.post-tags {
  display: inline-flex;
  gap: 0.5rem;
}

.post-tags a {
  border: 1px solid var(--c-gray);
  color: var(--c-gray);
  border-radius: 0.25rem;
  padding: 0.125rem 0.5rem;
}

.post-tags a:hover {
  text-decoration: none;
  color: var(--c-primary);
  border-color: var(--c-primary);
}

/** Theme Switcher **/
.theme-switch-button {
  position: relative;
  display: block;
  width: 40px;
  height: 22px;
  cursor: pointer;
  background: var(--theme-switch-bg);
  border: 1px solid var(--theme-switch-border-color);
  border-radius: 11px;
}

.theme-switch-button input {
  display: none;
}

.theme-switch-button input:checked + .theme-switch-check {
  transform: translateX(18px);
}

.theme-switch-check {
  position: absolute;
  top: 1px;
  left: 1px;
  width: 18px;
  height: 18px;
  background: #fff;
  border: 1px solid var(--theme-switch-border-color);
  border-radius: 50%;
  transition: background-color 0.25s, transform 0.25s;
}

.theme-switch-icon svg {
  position: absolute;
  top: 2px;
  left: 2px;
  width: 12px;
  height: 12px;
  opacity: 1;
}

[data-theme="light"] .theme-switch-appearance-moon {
  opacity: 0;
}

[data-theme="dark"] .theme-switch-appearance-sun {
  opacity: 0;
}

#hero p {
  font-size: calc(16px + 1.8vw);
}

@media all and (min-width: 768px) {
  .cp_embed_wrapper {
    /* stylelint-disable-line */
    margin-right: -5vw;
    margin-left: -5vw;
  }

  #hero {
    display: flex;
    gap: 1.5rem;
    margin-bottom: 3rem;
  }
  #hero svg {
    flex-shrink: 0;
    position: relative;
    top: -10px;
  }
  #hero p {
    margin: 0;
    line-height: calc(18px + 2.2vw);
  }

  .post-date {
    display: inline;
  }
}

/** Landing Page **/
.preview {
  max-width: 100%;
  margin: 2rem auto;
  border-radius: 16px;
  box-shadow: 0px 4px 8px rgb(0 0 0 / 24%), 0px 24px 40px rgb(0 0 0 / 24%);
  overflow: hidden;
  font-size: 0;
  line-height: 0;
}

@media all and (min-width: 768px) {
  .preview {
    border-radius: 40px;
    max-width: 720px;
  }
}

.preview .browser-bar {
  background-color: var(--c-body);
  height: 40px;
  display: flex;
  align-items: center;
  padding: 0 1.5rem;
}

.preview .browser-bar span {
  display: inline-block;
  width: 12px;
  height: 12px;
  border-radius: 50px;
  margin-right: 0.5rem;
}

.preview .browser-bar span:nth-child(1) {
  background-color: #ff5f57;
}

.preview .browser-bar span:nth-child(2) {
  background-color: #febc2e;
}

.preview .browser-bar span:nth-child(3) {
  background-color: #28c840;
}

.preview img {
  width: 100%;
  height: auto;
  border-radius: 0;
}

#reviews {
  background: var(--bg-footer);
  margin-bottom: -2rem;
}

.reviews {
  list-style: none;
  display: grid;
  row-gap: 1.5rem;
  max-width: 960px;
  margin: 0 auto 4rem auto;
  padding: 0 1rem;
}

@media all and (min-width: 768px) {
  .reviews {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    column-gap: 1.5rem;
  }
}

.review a::after,
.review::before {
  display: none;
}

.review {
  vertical-align: middle;
  background: #fff;
  box-shadow: 0px 4px 8px rgb(0 0 0 / 4%);
  border-radius: 40px;
  text-align: left;
  padding: 2rem;
}

.review:hover {
  transform: scale(1.05);
}

.review a {
  color: #151515;
  text-decoration: none;
}

.review p {
  font-size: 1.25rem;
}

.review .date {
  margin-left: 0.5rem;
  font-size: 1rem;
  color: var(--c-gray);
}

.review .rating {
  color: #fbbf24;
}

.pro {
  color: #fff;
  background-color: #fbbf24;
  border-radius: 48px;
  font-weight: 600;
  padding: 0 0.75rem;
  font-weight: normal;
}

.gumroad-button::after {
  display: none;
}

.loading-screen {
  background-color: #ffe53b;
  background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
  height: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1.25rem;
}

.loading-screen .icon {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: spin 1s linear infinite;
}

.loading-screen .text {
  font-size: 1.25rem;
  color: #fff;
  margin: 0.5rem 0;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/** Highlight js **/
.hljs-line {
  display: block;
  counter-increment: line-code;
}

.hljs-line:before {
  display: inline-block;
  content: counter(line-code);
  width: 20px;
  text-align: right;
  margin-right: 20px;
  opacity: 0.3;
  font-size: 0.85rem;
}

.single .post-title {
  margin-bottom: 3.5rem;
}

